Test 1 NO RANGEFINDER